# flmusic

./: Makefile.in  README  audio.c  audio.h  common.h  config.h.in  configure.ac  file_info.c  file_info.h  lang.h_utf8  mixer.c  player.c  player_mixer.h  reader.c  reader.h
convert/: Makefile  convert.c  lang.h
